--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@iconify-json/mdi": "^1.1.64",
+    "@nuxt/content": "^2.10.0",
     "vue3-carousel-nuxt": "^1.1.0"
   }
 }
