--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify-json/solar": "^1.1.9",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "nuxt": "^3.9.0",
+    "nuxt-aos": "^1.2.4",
     "vue": "^3.4.6",
     "vue-router": "^4.2.5"
   },
