:sparkles: Markdown support

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.4.10",
+    "@nuxtjs/mdc": "^0.8.3",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.13.0",
     "radix-vue": "^1.9.4",
     "vue": "latest"
   },
   "devDependencies": {
-    "@iconify-json/solar": "^1.1.10"
+    "@iconify-json/solar": "^1.1.10",
+    "@tailwindcss/typography": "^0.5.14"
   }
 }
