--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/icon": "^1.4.10",
-    "@nuxt/image": "^1.7.0",
-    "@nuxtjs/mdc": "^0.8.3",
+    "@nuxt/icon": "^1.5.1",
+    "@nuxt/image": "^1.8.0",
+    "@nuxtjs/mdc": "^0.9.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "nuxt": "^3.13.0",
+    "nuxt": "^3.13.1",
     "pocketbase": "^0.21.5",
     "radix-vue": "^1.9.5",
-    "vue": "latest",
+    "vue": "^3.5.5",
     "vue-skinview3d": "^0.3.1"
   },
   "devDependencies": {
-    "@iconify-json/solar": "^1.1.10",
-    "@tailwindcss/typography": "^0.5.14"
+    "@iconify-json/solar": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
