:bug: Fix #4 .drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,10 +13,7 @@ steps:
     image: node:slim
     commands:
       - export VERSION=$(node -p "require('./package.json').version")
-      - echo $VERSION
-    when:
-      event:
-        - push
+      - echo $VERSION > .version
 
   - name: docker
     image: plugins/docker
@@ -29,13 +26,9 @@ steps:
       repo: registry.smashmc.eu/nuxt-website
       tags:
         - latest
-        - ${DRONE_COMMIT_BRANCH}-${DRONE_BUILD_NUMBER} # Default tag in case the version is empty
         - ${VERSION}
       dockerfile: ./Dockerfile
     depends_on:
       - get-version
     environment:
-      VERSION: ${VERSION}
-    when:
-      event:
-        - push
+      VERSION: $(cat .version)
