--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/mdc": "^0.9.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "mongoose": "^8.6.2",
     "nuxt": "^3.13.1",
     "pocketbase": "^0.21.5",
     "radix-vue": "^1.9.5",
