--- a/env.template
+++ b/env.template
@@ -1,5 +1,1 @@
-NUXT_MONGODB_DB_URI=
-NUXT_MONGODB_DB_NAME=
-NUXT_MONGODB_USERNAME=
-NUXT_MONGODB_PASSWORD=
-NUXT_MONGODB_AUTH_SOURCE=
+TOP_API_BASE_URL=
