--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/mdc": "^0.9.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.13.2",
+    "nuxt-aos": "^1.2.5",
     "pocketbase": "^0.21.5",
     "radix-vue": "^1.9.6",
     "vue": "^3.5.8",
