--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/icon": "^1.5.1",
     "@nuxt/image": "^1.8.0",
+    "@nuxtjs/i18n": "^8.5.5",
     "@nuxtjs/mdc": "^0.9.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.13.2",
