--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/seo": "^3.0.3",
     "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/vue-table": "^8.21.3",
     "@vueuse/core": "^13.4.0",
     "@vueuse/nuxt": "^13.4.0",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "pinia": "^3.0.3",
     "reka-ui": "^2.3.1",
     "shadcn-nuxt": "^2.2.0",
+    "skinview3d": "^3.4.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
